warnings emoved from the code

--- a/Synchronome/makefile
+++ b/Synchronome/makefile
@@ -1,14 +1,11 @@
 CC = gcc
 LDFLAGS = -O0 -pg -g -Wcpp -Wall -lpthread -lrt
 
-run	: main.o cbfifo.o camera_driver.o time_spec.o services.o
-	$(CC) $(LDFLAGS) -o run main.o cbfifo.o camera_driver.o time_spec.o services.o
+run	: main.o camera_driver.o time_spec.o services.o
+	$(CC) $(LDFLAGS) -o run main.o camera_driver.o time_spec.o services.o
 
-main.o : main.c main.h cbfifo.h camera_driver.h time_spec.h services.h
+main.o : main.c main.h camera_driver.h time_spec.h services.h
 	$(CC) $(LDFLAGS) -c main.c
-
-cbfifo.o	: cbfifo.c cbfifo.h
-	 $(CC) $(LDFLAGS) -c cbfifo.c
 
 camera_driver.o	: camera_driver.c camera_driver.h
 	 $(CC) $(LDFLAGS) -c camera_driver.c
